# QLTOTapeMan

./: .gitignore  CMakeLists.txt  README.md  RECONSTRUCTION_PLAN.md  REFACTORING_PLAN.md
docs/: design_stage0.md  design_stage1.md  design_stage10.md  design_stage2.md  design_stage3.md  design_stage4.md  design_stage5.md  design_stage6.md  design_stage7.md  design_stage8.md  design_stage9.md  rewrite_plan.md
src/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  DirectRWDialog.cpp  DirectRWDialog.h  DirectRWDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  TapeModel.cpp  TapeModel.h  Version.h  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  DeviceSelectWidget.cpp  DeviceSelectWidget.h  DeviceSelectWidget.ui  FileBrowserDialog.cpp  FileBrowserDialog.h  FileBrowserDialog.ui  LtfsWriterWindow.cpp  LtfsWriterWindow.h  LtfsWriterWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
src/app/resources/: app.rc  resources.qrc
src/app/resources/icons/: README.md
src/app/translations/: QLTOTapeMan_en.ts  QLTOTapeMan_zh_CN.ts  QLTOTapeMan_zh_TW.ts
src/core/: ltfs_core_stub.cpp  ltfs_index.cpp  ltfs_index.h  ltfs_label.cpp  ltfs_label.h  ltfs_service.cpp  ltfs_service.h
src/device/: DeviceManager.cpp  DeviceManager.h  LtfsManager.cpp  LtfsManager.h  ScsiUtils.h
src/io/: tape_device.h  tape_device_linux.cpp  tape_device_linux.h  tape_device_mac.cpp  tape_device_mac.h  tape_device_stub.cpp  tape_device_win.cpp  tape_device_win.h  tape_enumerator.h  tape_enumerator_linux.cpp  tape_enumerator_linux.h  tape_enumerator_mac.cpp  tape_enumerator_mac.h  tape_enumerator_win.cpp  tape_enumerator_win.h  tape_factory.cpp  tape_factory.h
src/libqltfs/: CMakeLists.txt  libqltfs_global.h
src/libqltfs/device/: DeviceEnumerator.cpp  DeviceEnumerator.h  ScsiCommand.cpp  ScsiCommand.h  TapeDevice.cpp  TapeDevice.h
src/libqltfs/device/platform/: LinuxDeviceEnumerator.cpp  LinuxDeviceEnumerator.h  LinuxScsi.cpp  LinuxScsi.h  WinDeviceEnumerator.cpp  WinDeviceEnumerator.h  WinScsi.cpp  WinScsi.h
src/libqltfs/io/: BlockManager.cpp  BlockManager.h  HashCalculator.cpp  HashCalculator.h  TapeIO.cpp  TapeIO.h
src/libqltfs/util/: Logger.cpp  Logger.h  LtfsUtility.cpp  LtfsUtility.h  SizeFormatter.cpp  SizeFormatter.h
src/libqltfs/xml/: IndexParser.cpp  IndexParser.h  IndexWriter.cpp  IndexWriter.h
src/ltfs/: IndexManager.cpp  IndexManager.h  LtfsElements.h  LtfsIndexParser.cpp  LtfsIndexParser.h  LtfsVolumeManager.cpp  LtfsVolumeManager.h
src/pipeline/: file_data_provider.h  file_pipeline.cpp  file_pipeline_stub.cpp  file_record.h
src/transfer/: RingBuffer.cpp  RingBuffer.h  TransferEngine.cpp  TransferEngine.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CheckDialog.cpp  CheckDialog.h  DeviceStatusDialog.cpp  DeviceStatusDialog.h  DeviceStatusWidget.cpp  DeviceStatusWidget.h  DirectRWDialog.cpp  DirectRWDialog.h  FileBrowserWidget.cpp  FileBrowserWidget.h  FileBrowserWidget.ui  FormatDialog.cpp  FormatDialog.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TransferDialog.cpp  TransferDialog.h  file_browser_dialog.cpp  file_browser_dialog.h  ltfs_writer_window.cpp  ltfs_writer_window.h  main_window.cpp  main_window.h
src/ui/forms/: file_browser_dialog.ui  ltfs_writer_window.ui  main_window.ui
src/utils/: SettingsManager.cpp  SettingsManager.h
translations/: i18n.qrc  qltotapeman_en_US.qm  qltotapeman_en_US.ts  qltotapeman_zh_CN.qm  qltotapeman_zh_CN.ts  qltotapeman_zh_TW.qm  qltotapeman_zh_TW.ts
